--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "shuttle",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
+  "type": "module",
+    "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -10,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
