--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
+    "framer-motion": "^12.16.0",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-native-gesture-handler": "^2.24.0",
     "react-navigation": "^5.0.0",
     "react-router-dom": "^7.4.0",
@@ -42,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@react-native-community/cli": "latest"
   }
 }
