Update2 - added features, fixed bugs

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
-    "scripts": {
+  "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,6 +19,7 @@
     "firebase": "^11.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
+    "qrcode": "^1.5.4",
     "socket.io": "^4.8.1",
     "stripe": "^17.7.0"
   }
