--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.20.6",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
     "framer-motion": "^12.16.0",
+    "jwt-decode": "^4.0.0",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-native-gesture-handler": "^2.24.0",
     "react-navigation": "^5.0.0",
-    "react-router-dom": "^7.4.0",
+    "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
